--- a/source/DerbyOOo/build.properties
+++ b/source/DerbyOOo/build.properties
@@ -1,4 +1,4 @@
 #UNO project Ant build configuration file
-#Wed Apr 30 13:21:19 CEST 2025
-office.install.dir=/lib/libreoffice
-sdk.dir=/lib/libreoffice/sdk
+#Tue May 20 09:39:53 CEST 2025
+office.install.dir=/opt/libreoffice7.6
+sdk.dir=/opt/libreoffice7.6/sdk
