--- a/_fascan.yml
+++ b/_fascan.yml
@@ -1,14 +1,22 @@
 namespace: DerbyOOo
+
 output:
   file_path: ./Fluid-Attacks-Results.csv
   format: CSV
+
 working_dir: .
+
 sast:
   include:
     - glob(source/DerbyOOo/service/*.py)
     - glob(source/DerbyOOo/service/pythonpath/derby/*)
+
 sca:
+  exclude:
+    - dependency_name: setuptools
+      reason: False Positive
   include:
     - .
+
 language: EN
 strict: true
